[gd_scene load_steps=10 format=3 uid="uid://37755xyiuhta"]

[ext_resource type="Script" path="res://scripts/vsscreen.gd" id="1_e0g38"]
[ext_resource type="Texture2D" uid="uid://cv81gawplp0bu" path="res://sprites/newspaper/vsjornal.png" id="2_jaxav"]
[ext_resource type="AudioStream" uid="uid://b7pj21yk0yykx" path="res://audio/bossa.mp3" id="3_b1flo"]

[sub_resource type="Animation" id="Animation_2rx7l"]
resource_name = "intro_anim"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqk5e"]
_data = {
"intro_anim": SubResource("Animation_2rx7l")
}

[sub_resource type="Gradient" id="Gradient_6rjcx"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n3r4t"]
gradient = SubResource("Gradient_6rjcx")

[sub_resource type="Gradient" id="Gradient_q4p0d"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mscxq"]
gradient = SubResource("Gradient_q4p0d")

[node name="VsScreen" type="Node2D"]
script = ExtResource("1_e0g38")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sqk5e")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1925.0
offset_bottom = 1089.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_jaxav")

[node name="LeftChar" type="Sprite2D" parent="Control"]
position = Vector2(423, 442)
scale = Vector2(0.3, 0.3)
texture = SubResource("GradientTexture2D_n3r4t")

[node name="RightChar" type="Sprite2D" parent="Control"]
position = Vector2(1453, 716)
scale = Vector2(0.3, 0.3)
texture = SubResource("GradientTexture2D_mscxq")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_b1flo")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
